@@ -1,3 +1,8 @@
+2004-07-30  Corinna Vinschen  <corinna@vinschen.de>
+
+	* bsd_mutex.cc (_msleep): Reset event object and close it before
+	entering mutex.  Turn order of conditional for better readability.
+
 2004-07-26  Corinna Vinschen  <corinna@vinschen.de>
 
 	* cygserver.conf: Describe relation between shmmaxpgs and SHMMAX.
